Update marketplace service api (#5)
