# rest_server/src/models/marketplace_item.js
@@ -1,31 +1,33 @@
 // Copyright (c) Microsoft Corporation.
 // Licensed under the MIT License.
 const { isNil, get } = require("lodash");
-const modelSyncHandler = require("./modelSyncHandler");
+const modelSyncHandler = require("./model_init_handler");
 
 class MarketplaceItem {
-  constructor(sequelize, DataTypes, models) {
+  constructor(sequelize, DataTypes) {
     this.orm = sequelize.define("MarketplaceItem", {
       name: DataTypes.STRING,
       author: DataTypes.STRING,
-      category: DataTypes.ARRAY(DataTypes.STRING), // eslint-disable-line new-cap
+      category: DataTypes.ARRAY(DataTypes.STRING),
+      tags: DataTypes.ARRAY(DataTypes.STRING),
       introduction: DataTypes.STRING,
       description: DataTypes.TEXT,
-      jobConfig: DataTypes.JSON,
-      submits: DataTypes.INTEGER
+      jobConfig: DataTypes.JSON, // TODO: protocol validation in the future
+      submits: {type: DataTypes.INTEGER, allowNull: false, defaultValue: 0},
+      starNumber: {type: DataTypes.INTEGER, allowNull: false, defaultValue: 0},
+      status: DataTypes.ENUM("pending", "approved", "rejected")
     });
   }
 
   associate(models) {
-    this.orm.belongsToMany(models.Tag.orm, { through: "ItemTag" });
     this.orm.belongsToMany(models.User.orm, {
       through: "StarRelation"
     });
     this.models = models;
   }
 
-  async list(name, author, category) {
-    const handler = modelSyncHandler(async (name, author, category) => {
+  async list(name, author, category, status) {
+    const handler = modelSyncHandler(async (name, author, category, status) => {
       const filterStatement = {};
       if (name) {
         filterStatement.name = name;
@@ -36,30 +38,21 @@ class MarketplaceItem {
       if (category) {
         filterStatement.category = category;
       }
+      if (status) {
+        filterStatement.status = status;
+      }
       const items = await this.orm.findAll({ where: filterStatement });
-      const processItems = await Promise.all(
-        items.map(async item => {
-          const tags = await this.listTags(item.id);
-          const starUsers = await this.listStarUsers(item.id);
-          item.dataValues["tags"] = tags.map(tag => tag.name);
-          item.dataValues["starNumber"] = starUsers.length;
-          return item;
-        })
-      );
-      return processItems;
+      return items;
     });
 
-    return await handler(name, author, category, this.models);
+    return await handler(name, author, category, status, this.models);
   }
 
   async create(itemReq) {
     const handler = modelSyncHandler(async itemReq => {
-      const tags = get(itemReq, "tags");
-      delete itemReq.tags;
+      itemReq.submits = 0;
+      itemReq.starNumber = 0;
       const item = await this.orm.create(itemReq);
-      if (!isNil(tags)) {
-        await this.updateTags(item.id, tags);
-      }
     });
 
     await handler(itemReq, this.models);
@@ -73,10 +66,6 @@ class MarketplaceItem {
       if (isNil(item)) {
         return null;
       } else {
-        const tags = await this.listTags(itemId);
-        const starUsers = await this.listStarUsers(itemId);
-        item.dataValues["tags"] = tags.map(tag => tag.name);
-        item.dataValues["starNumber"] = starUsers.length;
         return item;
       }
     });
@@ -92,18 +81,45 @@ class MarketplaceItem {
       if (isNil(item)) {
         return null;
       } else {
-        const tags = get(newItemReq, "tags");
-        delete newItemReq.tags;
         await item.update(newItemReq);
-        if (!isNil(tags)) {
-          await this.updateTags(item.id, tags);
-        }
 
         return item;
       }
     });
 
     return await handler(itemId, newItemReq, this.models);
+  }
+
+  async updateDescription(itemId, description) {
+    const handler = modelSyncHandler(async (itemId, description) => {
+      const item = await this.orm.findOne({
+        where: { id: itemId }
+      });
+      if (isNil(item)) {
+        return null;
+      } else {
+        await item.update({ description: description });
+        return item;
+      }
+    });
+
+    return await handler(itemId, description, this.models);
+  }
+
+  async updateStatus(itemId, status) {
+    const handler = modelSyncHandler(async (itemId, status) => {
+      const item = await this.orm.findOne({
+        where: { id: itemId }
+      });
+      if (isNil(item)) {
+        return null;
+      } else {
+        await item.update({ status: status });
+        return item;
+      }
+    });
+
+    return await handler(itemId, status, this.models);
   }
 
   async del(itemId) {
@@ -119,43 +135,6 @@ class MarketplaceItem {
     });
 
     return await handler(itemId, this.models);
-  }
-
-  async listTags(itemId) {
-    const handler = modelSyncHandler(async itemId => {
-      const item = await this.orm.findOne({
-        where: { id: itemId }
-      });
-      if (isNil(item)) {
-        return null;
-      } else {
-        return await item.getTags();
-      }
-    });
-
-    return await handler(itemId, this.models);
-  }
-
-  async updateTags(itemId, newTags) {
-    const handler = modelSyncHandler(async (itemId, newTags) => {
-      const item = await this.orm.findOne({
-        where: { id: itemId }
-      });
-      if (isNil(item)) {
-        return null;
-      } else {
-        item.setTags([]);
-        newTags.map(async tag => {
-          const [newTag, created] = await this.models.Tag.orm.findOrCreate({
-            where: { name: tag }
-          });
-          await item.addTag(newTag);
-        });
-        return newTags;
-      }
-    });
-
-    return await handler(itemId, newTags, this.models);
   }
 
   async listStarUsers(itemId) {
