# rest_server/src/router.js
@@ -1,33 +1,46 @@
 // Copyright (c) Microsoft Corporation.
 // Licensed under the MIT License.
 const express = require("express");
-const itemController = require("./controllers/item-controller");
-const userController = require("./controllers/user-controller");
+const itemController = require("./controllers/item_controller");
+const userController = require("./controllers/user_controller");
 
 const router = new express.Router();
 
 router
-  .route("/marketplace/items")
+  .route("/items")
   .get(itemController.list)
   .post(itemController.create);
 
 router
-  .route("/marketplace/items/:itemId")
+  .route("/items/:itemId")
   .get(itemController.get)
   .put(itemController.update)
   .delete(itemController.del);
 
 router
-  .route("/marketplace/items/:itemId/starUsers")
-  .get(itemController.listStarUsers);
-
-router.route("/user/:username/starItems").get(userController.list);
+  .route("/items/:itemId/description")
+  .put(itemController.updateDescription);
 
 router
-  .route("/user/:username/starItems/:itemId")
-  .get(userController.get)
-  .put(userController.update)
-  .delete(userController.del);
+  .route("/items/:itemId/status")
+  .put(itemController.updateStatus);
+
+router
+  .route("/items/:itemId/starUsers")
+  .get(itemController.listStarUsers);
+
+router
+  .route("/users")
+  .get(userController.list)
+  .post(userController.create);
+
+router.route("/users/:username/starItems").get(userController.listItems);
+
+router
+  .route("/users/:username/starItems/:itemId")
+  .get(userController.getItem)
+  .put(userController.updateItem)
+  .delete(userController.deleteItem);
 
 // module exports
 module.exports = router;
